[EPAD8-2416] Resolving issue with help-text spacing.

--- a/services/drupal/web/modules/custom/epa_workflow/css/epa-content-moderation.css
+++ b/services/drupal/web/modules/custom/epa_workflow/css/epa-content-moderation.css
@@ -505,7 +505,6 @@
   color: var(--epa-color-tabs);
   font-size: 0.875rem;
   margin-block: 0;
-  padding: 0 0.75rem;
 }
 
 .epa-content-moderation__notice {
